feat: #159 기관의 보호 동물 목록 필터링